# src/app/openapi-gen/model/categoryDto.ts
@@ -1,0 +1,19 @@
+/**
+ * OpenAPI definition
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: v0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface CategoryDto { 
+    id?: number;
+    categoryName?: string;
+    owner?: number;
+}
+
