# src/app/openapi/api-docs.yaml
@@ -3,13 +3,13 @@ info:
   title: OpenAPI definition
   version: v0
 servers:
-  - url: http://localhost:9001
-    description: Generated server url
+- url: http://localhost:9001
+  description: Generated server url
 paths:
   /api/users/:
     get:
       tags:
-        - user-rest-controller
+      - user-rest-controller
       operationId: getAllUsers_1
       responses:
         "200":
@@ -22,7 +22,7 @@ paths:
                   $ref: '#/components/schemas/UserDto'
     put:
       tags:
-        - user-rest-controller
+      - user-rest-controller
       operationId: updateUser
       requestBody:
         content:
@@ -39,7 +39,7 @@ paths:
                 $ref: '#/components/schemas/UserDto'
     post:
       tags:
-        - user-rest-controller
+      - user-rest-controller
       operationId: createUser
       requestBody:
         content:
@@ -56,15 +56,15 @@ paths:
                 $ref: '#/components/schemas/UserDto'
     delete:
       tags:
-        - user-rest-controller
+      - user-rest-controller
       operationId: deleteUser
       parameters:
-        - name: id
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int64
+      - name: id
+        in: query
+        required: true
+        schema:
+          type: integer
+          format: int64
       responses:
         "200":
           description: OK
@@ -75,15 +75,15 @@ paths:
   /api/categories/:
     get:
       tags:
-        - category-rest-controller
+      - category-rest-controller
       operationId: getAllCategoriesOfUser
       parameters:
-        - name: id
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int64
+      - name: id
+        in: query
+        required: true
+        schema:
+          type: integer
+          format: int64
       responses:
         "200":
           description: OK
@@ -95,7 +95,7 @@ paths:
                   $ref: '#/components/schemas/CategoryDto'
     put:
       tags:
-        - category-rest-controller
+      - category-rest-controller
       operationId: updateCategory
       requestBody:
         content:
@@ -112,7 +112,7 @@ paths:
                 $ref: '#/components/schemas/CategoryDto'
     post:
       tags:
-        - category-rest-controller
+      - category-rest-controller
       operationId: createCategory
       requestBody:
         content:
@@ -129,15 +129,15 @@ paths:
                 $ref: '#/components/schemas/CategoryDto'
     delete:
       tags:
-        - category-rest-controller
+      - category-rest-controller
       operationId: deleteCategory
       parameters:
-        - name: id
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int64
+      - name: id
+        in: query
+        required: true
+        schema:
+          type: integer
+          format: int64
       responses:
         "200":
           description: OK
@@ -148,15 +148,15 @@ paths:
   /api/cards/:
     get:
       tags:
-        - card-rest-controller
+      - card-rest-controller
       operationId: getCardsByCategory
       parameters:
-        - name: categoryId
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int64
+      - name: categoryId
+        in: query
+        required: true
+        schema:
+          type: integer
+          format: int64
       responses:
         "200":
           description: OK
@@ -168,7 +168,7 @@ paths:
                   $ref: '#/components/schemas/CardDto'
     put:
       tags:
-        - card-rest-controller
+      - card-rest-controller
       operationId: updateCard
       requestBody:
         content:
@@ -185,7 +185,7 @@ paths:
                 $ref: '#/components/schemas/CardDto'
     post:
       tags:
-        - card-rest-controller
+      - card-rest-controller
       operationId: addCard
       requestBody:
         content:
@@ -202,15 +202,15 @@ paths:
                 $ref: '#/components/schemas/CardDto'
     delete:
       tags:
-        - card-rest-controller
+      - card-rest-controller
       operationId: deleteCard
       parameters:
-        - name: cardId
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int64
+      - name: cardId
+        in: query
+        required: true
+        schema:
+          type: integer
+          format: int64
       responses:
         "200":
           description: OK
@@ -219,78 +219,116 @@ paths:
               schema:
                 type: string
                 enum:
-                  - 100 CONTINUE
-                  - 101 SWITCHING_PROTOCOLS
-                  - 102 PROCESSING
-                  - 103 CHECKPOINT
-                  - 200 OK
-                  - 201 CREATED
-                  - 202 ACCEPTED
-                  - 203 NON_AUTHORITATIVE_INFORMATION
-                  - 204 NO_CONTENT
-                  - 205 RESET_CONTENT
-                  - 206 PARTIAL_CONTENT
-                  - 207 MULTI_STATUS
-                  - 208 ALREADY_REPORTED
-                  - 226 IM_USED
-                  - 300 MULTIPLE_CHOICES
-                  - 301 MOVED_PERMANENTLY
-                  - 302 FOUND
-                  - 302 MOVED_TEMPORARILY
-                  - 303 SEE_OTHER
-                  - 304 NOT_MODIFIED
-                  - 305 USE_PROXY
-                  - 307 TEMPORARY_REDIRECT
-                  - 308 PERMANENT_REDIRECT
-                  - 400 BAD_REQUEST
-                  - 401 UNAUTHORIZED
-                  - 402 PAYMENT_REQUIRED
-                  - 403 FORBIDDEN
-                  - 404 NOT_FOUND
-                  - 405 METHOD_NOT_ALLOWED
-                  - 406 NOT_ACCEPTABLE
-                  - 407 PROXY_AUTHENTICATION_REQUIRED
-                  - 408 REQUEST_TIMEOUT
-                  - 409 CONFLICT
-                  - 410 GONE
-                  - 411 LENGTH_REQUIRED
-                  - 412 PRECONDITION_FAILED
-                  - 413 PAYLOAD_TOO_LARGE
-                  - 413 REQUEST_ENTITY_TOO_LARGE
-                  - 414 URI_TOO_LONG
-                  - 414 REQUEST_URI_TOO_LONG
-                  - 415 UNSUPPORTED_MEDIA_TYPE
-                  - 416 REQUESTED_RANGE_NOT_SATISFIABLE
-                  - 417 EXPECTATION_FAILED
-                  - 418 I_AM_A_TEAPOT
-                  - 419 INSUFFICIENT_SPACE_ON_RESOURCE
-                  - 420 METHOD_FAILURE
-                  - 421 DESTINATION_LOCKED
-                  - 422 UNPROCESSABLE_ENTITY
-                  - 423 LOCKED
-                  - 424 FAILED_DEPENDENCY
-                  - 425 TOO_EARLY
-                  - 426 UPGRADE_REQUIRED
-                  - 428 PRECONDITION_REQUIRED
-                  - 429 TOO_MANY_REQUESTS
-                  - 431 REQUEST_HEADER_FIELDS_TOO_LARGE
-                  - 451 UNAVAILABLE_FOR_LEGAL_REASONS
-                  - 500 INTERNAL_SERVER_ERROR
-                  - 501 NOT_IMPLEMENTED
-                  - 502 BAD_GATEWAY
-                  - 503 SERVICE_UNAVAILABLE
-                  - 504 GATEWAY_TIMEOUT
-                  - 505 HTTP_VERSION_NOT_SUPPORTED
-                  - 506 VARIANT_ALSO_NEGOTIATES
-                  - 507 INSUFFICIENT_STORAGE
-                  - 508 LOOP_DETECTED
-                  - 509 BANDWIDTH_LIMIT_EXCEEDED
-                  - 510 NOT_EXTENDED
-                  - 511 NETWORK_AUTHENTICATION_REQUIRED
-  /api/learns/:
+                - 100 CONTINUE
+                - 101 SWITCHING_PROTOCOLS
+                - 102 PROCESSING
+                - 103 CHECKPOINT
+                - 200 OK
+                - 201 CREATED
+                - 202 ACCEPTED
+                - 203 NON_AUTHORITATIVE_INFORMATION
+                - 204 NO_CONTENT
+                - 205 RESET_CONTENT
+                - 206 PARTIAL_CONTENT
+                - 207 MULTI_STATUS
+                - 208 ALREADY_REPORTED
+                - 226 IM_USED
+                - 300 MULTIPLE_CHOICES
+                - 301 MOVED_PERMANENTLY
+                - 302 FOUND
+                - 302 MOVED_TEMPORARILY
+                - 303 SEE_OTHER
+                - 304 NOT_MODIFIED
+                - 305 USE_PROXY
+                - 307 TEMPORARY_REDIRECT
+                - 308 PERMANENT_REDIRECT
+                - 400 BAD_REQUEST
+                - 401 UNAUTHORIZED
+                - 402 PAYMENT_REQUIRED
+                - 403 FORBIDDEN
+                - 404 NOT_FOUND
+                - 405 METHOD_NOT_ALLOWED
+                - 406 NOT_ACCEPTABLE
+                - 407 PROXY_AUTHENTICATION_REQUIRED
+                - 408 REQUEST_TIMEOUT
+                - 409 CONFLICT
+                - 410 GONE
+                - 411 LENGTH_REQUIRED
+                - 412 PRECONDITION_FAILED
+                - 413 PAYLOAD_TOO_LARGE
+                - 413 REQUEST_ENTITY_TOO_LARGE
+                - 414 URI_TOO_LONG
+                - 414 REQUEST_URI_TOO_LONG
+                - 415 UNSUPPORTED_MEDIA_TYPE
+                - 416 REQUESTED_RANGE_NOT_SATISFIABLE
+                - 417 EXPECTATION_FAILED
+                - 418 I_AM_A_TEAPOT
+                - 419 INSUFFICIENT_SPACE_ON_RESOURCE
+                - 420 METHOD_FAILURE
+                - 421 DESTINATION_LOCKED
+                - 422 UNPROCESSABLE_ENTITY
+                - 423 LOCKED
+                - 424 FAILED_DEPENDENCY
+                - 425 TOO_EARLY
+                - 426 UPGRADE_REQUIRED
+                - 428 PRECONDITION_REQUIRED
+                - 429 TOO_MANY_REQUESTS
+                - 431 REQUEST_HEADER_FIELDS_TOO_LARGE
+                - 451 UNAVAILABLE_FOR_LEGAL_REASONS
+                - 500 INTERNAL_SERVER_ERROR
+                - 501 NOT_IMPLEMENTED
+                - 502 BAD_GATEWAY
+                - 503 SERVICE_UNAVAILABLE
+                - 504 GATEWAY_TIMEOUT
+                - 505 HTTP_VERSION_NOT_SUPPORTED
+                - 506 VARIANT_ALSO_NEGOTIATES
+                - 507 INSUFFICIENT_STORAGE
+                - 508 LOOP_DETECTED
+                - 509 BANDWIDTH_LIMIT_EXCEEDED
+                - 510 NOT_EXTENDED
+                - 511 NETWORK_AUTHENTICATION_REQUIRED
+  /api/users/login:
     post:
       tags:
-        - learn-rest-controller
+      - user-rest-controller
+      operationId: login
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LoginDto'
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/UserDto'
+  /api/learns/:
+    get:
+      tags:
+      - learn-rest-controller
+      operationId: cardsToLearn
+      parameters:
+      - name: categoryId
+        in: query
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CardDto'
+    post:
+      tags:
+      - learn-rest-controller
       operationId: cardLearned
       requestBody:
         content:
@@ -308,7 +346,7 @@ paths:
   /healthCheck:
     get:
       tags:
-        - health-check
+      - health-check
       operationId: healthCheck
       responses:
         "200":
@@ -317,10 +355,31 @@ paths:
             '*/*':
               schema:
                 type: string
+  /api/users/info:
+    get:
+      tags:
+      - user-rest-controller
+      operationId: getInfosOfUser
+      parameters:
+      - name: id
+        in: query
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/InfoDto'
   /api/users:
     get:
       tags:
-        - user-rest-controller
+      - user-rest-controller
       operationId: getAllUsers
       responses:
         "200":
@@ -334,7 +393,7 @@ paths:
   /:
     get:
       tags:
-        - health-check
+      - health-check
       operationId: index
       responses:
         "200":
@@ -356,6 +415,8 @@ components:
         firstName:
           type: string
         mailAddress:
+          type: string
+        password:
           type: string
     CategoryDto:
       type: object
@@ -381,6 +442,13 @@ components:
         categoryId:
           type: integer
           format: int64
+    LoginDto:
+      type: object
+      properties:
+        mailAddress:
+          type: string
+        password:
+          type: string
     LearnDto:
       type: object
       properties:
@@ -389,3 +457,17 @@ components:
           format: int64
         correct:
           type: boolean
+    InfoDto:
+      type: object
+      properties:
+        numberOfCards:
+          type: integer
+          format: int32
+        toLearn:
+          type: integer
+          format: int32
+        categoryName:
+          type: string
+        categoryId:
+          type: integer
+          format: int64
